tests/snapshots/end_to_end__00_hello-vil.snap
---
source: tests/end_to_end.rs
expression: vil_output
---
extern venice_string_new;
extern venice_println;



func venice_main {

venice_main_0:
  frame_set_up 0
  callee_save R2
  callee_save R3
  callee_save R4
  callee_save R5
  callee_save R6
  R0 = set s_0
  R1 = move R0
  caller_save R0
  caller_save R1
  R7 = move R1
  call %venice_string_new
  R1 = caller_restore
  R0 = caller_restore
  R1 = move R13
  R2 = move R1
  caller_save R0
  caller_save R1
  R7 = move R2
  call %venice_println
  R1 = caller_restore
  R0 = caller_restore
  R2 = move R13
  R0 = set 0
  R13 = move R0
  R6 = callee_restore
  R5 = callee_restore
  R4 = callee_restore
  R3 = callee_restore
  R2 = callee_restore
  frame_tear_down 0
  ret
}


data s_0 = "Hello, world!";

