tests/snapshots/end_to_end__00_hello-x86.snap
---
source: tests/end_to_end.rs
expression: x86_output
---
extern venice_println


section .text

global main
main:
  push rbp
  mov rbp, rsp
  sub rsp, 0

main_0:
  mov rbx, s_0
  mov rdi, rbx
  call venice_println
  mov rax, rax
  mov rcx, 0
  mov rax, rcx
  add rsp, 0
  pop rbp
  ret

section .data

  s_0 db "Hello, world!", 0

