tests/snapshots/end_to_end__01_simple_if-x86.snap
---
source: tests/end_to_end.rs
expression: x86_output
---
.globl venice_main
venice_main:
  pushq %rbp
  movq %rsp, %rbp
  subq $0, %rsp
  pushq %r12
  pushq %r13
  pushq %r14
  pushq %r15
  pushq %rbx

venice_main_0:
  movq $1, %r10
  movq $1, %rax
  cmpq %rax, %r10
  je if_true_2
  jmp if_false_3

if_true_2:
  movq $.s_0, %r10
  movq %r10, %r11
  pushq %r10
  pushq %r11
  movq %r11, %rdi
  subq $8, %rsp
  call venice_string_new
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r11
  movq %r11, %r12
  pushq %r10
  pushq %r11
  movq %r12, %rdi
  subq $8, %rsp
  call venice_println
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r12
  jmp if_end_4

if_false_3:
  movq $.s_1, %r10
  movq %r10, %r11
  pushq %r10
  pushq %r11
  movq %r11, %rdi
  subq $8, %rsp
  call venice_string_new
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r11
  movq %r11, %r12
  pushq %r10
  pushq %r11
  movq %r12, %rdi
  subq $8, %rsp
  call venice_println
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r12
  jmp if_end_4

if_end_4:
  movq $0, %r10
  movq %r10, %rax
  jmp venice_main_return_1

venice_main_return_1:
  popq %rbx
  popq %r15
  popq %r14
  popq %r13
  popq %r12
  addq $0, %rsp
  popq %rbp
  retq

.s_0:
  .string "pass"
.s_1:
  .string "fail"

