tests/snapshots/end_to_end__02_countdown-vil.snap
---
source: tests/end_to_end.rs
expression: vil_output
---
extern venice_printint;



func venice_main {

venice_main_0:
  R0 = set 10
  store R0, -8  // i__0
  jump while_cond_2

while_cond_2:
  R0 = load -8  // i__0
  R1 = move R0
  R0 = set 0
  cmp R1, R0
  jump_gt while_3, while_end_4

while_3:
  R0 = load -8  // i__0
  R1 = move R0
  call venice_printint, R1
  R1 = move R13
  R0 = load -8  // i__0
  R1 = move R0
  R0 = set 1
  R1 = sub R1, R0
  store R1, -8  // i__0
  jump while_cond_2

while_end_4:
  R0 = set 0
  R13 = move R0
  jump venice_main_return_1

venice_main_return_1:
}

