tests/snapshots/end_to_end__02_countdown-x86.snap
---
source: tests/end_to_end.rs
expression: x86_output
---
extern venice_printint


section .text

global main
main:
  push rbx
  push rcx
  push rdx
  push rbp
  mov rbp, rsp
  sub rsp, 8

main_0:
  mov rax, 10
  mov [rbp-8], rax
  jmp while_cond_1

while_cond_1:
  mov rax, [rbp-8]
  mov rbx, 0
  cmp rax, rbx
  jg while_2
  jmp while_end_3

while_2:
  mov rdx, [rbp-8]
  mov rdi, rdx
  call venice_printint
  mov rcx, rax
  mov rbx, [rbp-8]
  mov rcx, 1
  mov rax, rbx
  sub rax, rcx
  mov [rbp-8], rax
  jmp while_cond_1

while_end_3:
  mov rax, 0
  mov rax, rax
  add rsp, 8
  pop rbp
  pop rdx
  pop rcx
  pop rbx
  ret

section .data


