tests/snapshots/end_to_end__03_simple_function-x86.snap
---
source: tests/end_to_end.rs
expression: x86_output
---
extern venice_printint


section .text

two_plus_two__0:
  push rbx
  push rcx
  push rbp
  mov rbp, rsp
  sub rsp, 0

two_plus_two__0_0:
  mov rbx, 2
  mov rcx, 2
  mov rax, rcx
  add rax, rbx
  mov rax, rax
  add rsp, 0
  pop rbp
  pop rcx
  pop rbx
  ret

global main
main:
  push rbx
  push rbp
  mov rbp, rsp
  sub rsp, 8

main_1:
  call two_plus_two__0
  mov rax, rax
  mov [rbp-8], rax
  mov rbx, [rbp-8]
  mov rdi, rbx
  call venice_printint
  mov rax, rax
  mov rax, 0
  mov rax, rax
  add rsp, 8
  pop rbp
  pop rbx
  ret

section .data


