tests/snapshots/end_to_end__04_simple_function_with_args-x86.snap
---
source: tests/end_to_end.rs
expression: x86_output
---
sub__0:
  pushq %rbp
  movq %rsp, %rbp
  subq $16, %rsp
  pushq %r12
  pushq %r13
  pushq %r14
  pushq %r15
  pushq %rbx
  movq %rdi, -8(%rbp)
  movq %rsi, -16(%rbp)

sub__0_0:
  movq -8(%rbp), %r10
  movq %r10, %r11
  movq -16(%rbp), %r10
  subq %r10, %r11
  movq %r11, %r11
  movq %r11, %rax
  jmp sub__0_return_1

sub__0_return_1:
  popq %rbx
  popq %r15
  popq %r14
  popq %r13
  popq %r12
  addq $16, %rsp
  popq %rbp
  retq

.globl venice_main
venice_main:
  pushq %rbp
  movq %rsp, %rbp
  subq $32, %rsp
  pushq %r12
  pushq %r13
  pushq %r14
  pushq %r15
  pushq %rbx

venice_main_2:
  movq $47, %r10
  movq %r10, -8(%rbp)
  movq $5, %r10
  movq %r10, -16(%rbp)
  pushq %r10
  pushq %r11
  movq -8(%rbp), %rdi
  movq -16(%rbp), %rsi
  subq $8, %rsp
  call sub__0
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq %r10, -24(%rbp)
  movq -24(%rbp), %r10
  movq %r10, -32(%rbp)
  pushq %r10
  pushq %r11
  movq -32(%rbp), %rdi
  subq $8, %rsp
  call venice_printint
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq $0, %r10
  movq %r10, %rax
  jmp venice_main_return_3

venice_main_return_3:
  popq %rbx
  popq %r15
  popq %r14
  popq %r13
  popq %r12
  addq $32, %rsp
  popq %rbp
  retq


