tests/snapshots/end_to_end__05_multiply_divide-vil.snap
---
source: tests/end_to_end.rs
expression: vil_output
---
extern venice_printint;
extern venice_printint;



func main {

main_0:
  callee_save %rg2
  callee_save %rg3
  callee_save %rg4
  callee_save %rg5
  callee_save %rg6
  frame_set_up 16
  %x__0 = alloca 8
  %rg1 = set 21
  %rg2 = set 2
  %rg0 = mul %rg1, %rg2
  %x__0 = store %rg0, 0
  %rg1 = load %x__0, 0
  %rp0 = move %rg1
  caller_save %rg0
  caller_save %rg1
  call %venice_printint
  %rg1 = caller_restore
  %rg0 = caller_restore
  %rg0 = move %rt
  %y__1 = alloca 8
  %rg1 = set 84
  %rg2 = set 2
  %rg0 = div %rg1, %rg2
  %y__1 = store %rg0, 0
  %rg1 = load %y__1, 0
  %rp0 = move %rg1
  caller_save %rg0
  caller_save %rg1
  call %venice_printint
  %rg1 = caller_restore
  %rg0 = caller_restore
  %rg0 = move %rt
  %rg0 = set 0
  %rt = move %rg0
  frame_tear_down 16
  %rg6 = callee_restore
  %rg5 = callee_restore
  %rg4 = callee_restore
  %rg3 = callee_restore
  %rg2 = callee_restore
  ret
}

