tests/snapshots/end_to_end__05_multiply_divide-x86.snap
---
source: tests/end_to_end.rs
expression: x86_output
---
.globl venice_main
venice_main:

venice_main_0:
  pushq %rbp
  movq %rsp, %rbp
  subq $16, %rsp
  pushq %r12
  pushq %r13
  pushq %r14
  pushq %r15
  pushq %rbx
  movq $21, %r10
  movq %r10, %r11
  movq $2, %r10
  imulq %r10, %r11
  movq %r11, %r11
  movq %r11, -8(%rbp)
  movq -8(%rbp), %r10
  movq %r10, %r11
  pushq %r10
  pushq %r11
  movq %r11, %rdi
  subq $8, %rsp
  call venice_printint
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r11
  movq $84, %r10
  movq %r10, %r11
  movq $2, %r10
  xorq %r12, %r12
  movq %r11, %rax
  divq %r10
  movq %rax, %r11
  movq %r11, -16(%rbp)
  movq -16(%rbp), %r10
  movq %r10, %r11
  pushq %r10
  pushq %r11
  movq %r11, %rdi
  subq $8, %rsp
  call venice_printint
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r11
  movq $0, %r10
  movq %r10, %rax
  popq %rbx
  popq %r15
  popq %r14
  popq %r13
  popq %r12
  addq $16, %rsp
  popq %rbp
  retq


